# assist-gs

./: .gitignore  README.md  pyproject.toml
assistgs/: assistgs_config.py  assistgs_pipeline.py  assistgs_trainer.py
assistgs/data/: assistgs_datamanger.py  assistgs_dataparser.py  assistgs_dataset.py
assistgs/models/: assistgs_model.py  splatfacto.py
assistgs/utils/: get_aabb.py  pcd2nerfstudio.py
assistgs/viewer/: control_panel.py  export_panel.py  viewer.py
