[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assistgs"
version = "0.0"
description = "The gs version code repository for the paper: ASSIST: Interactive Scene Nodes for Scalable and Realistic Indoor Simulation"
readme = "README.md"
license = { text="Apache 2.0" }

requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

dependencies = [
    "nerfstudio",
    "pypose",
]

[tool.setuptools.packages.find]
include = ["assistgs*"]

[project.entry-points.'nerfstudio.method_configs']
assist-gs = 'assistgs.assistgs_config:assistgs'


[project.entry-points.'nerfstudio.dataparser_configs']
AssistGSDataParserConfig = 'assistgs.data.assistgs_dataparser:AssistGSDataParserConfigSpecification'
